# publi_cast

./: .editorconfig  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  FIXES_SUMMARY.md  Makefile  QUICK_START.md  README.md  SECURITY.md  and add missing dependencies  git_history.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_publicast.py  setup.py  tasks.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
publi_cast/: __init__.py  config.py  main.py  user_config.json  version.py
publi_cast/audacity/: audacity_api.py  named_pipe.py  pipe.py  service.py
publi_cast/audio/: __init__.py  dynamic_compressor.py
publi_cast/controllers/: export_controller.py  import_controller.py
publi_cast/dialogs/: audio_dialog.py
publi_cast/gui/: __init__.py  localization.py  main_window.py  settings_panel.py  tooltip.py
publi_cast/repositories/: audacity_repository.py
publi_cast/services/: audacity_alternative_service.py  audacity_service.py  compressor_service.py  logger_service.py
publi_cast/tests/: test_audacity_api.py  test_audio_dialog.py  test_named_pipe.py
publi_cast/tools/: pipe_diagnostic.py
